[gd_scene load_steps=4 format=3 uid="uid://ccipvgdv7ak8a"]

[ext_resource type="Script" path="res://leaf.gd" id="1_kdusa"]
[ext_resource type="Texture2D" uid="uid://d5fkrfdifj3v" path="res://assets/leaf.png" id="1_lldyr"]

[sub_resource type="Curve2D" id="Curve2D_4yrfy"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 144, 5, 0, 0, 0, 0, 123, 21, 0, 0, 0, 0, 96, 28, 0, 0, 0, 0, 120, 47, 0, 0, 0, 0, 136, 54, 0, 0, 0, 0, 153, 57, 0, 0, 0, 0, 192, 58, 0, 0, 0, 0, 165, 81, 0, 0, 0, 0, 125, 92, 0, 0, 0, 0, 91, 99, 0, 0, 0, 0, 52, 97, 0, 0, 0, 0, 84, 127, 0, 0, 0, 0, 131, 143, 0, 0, 0, 0, 182, 155, 0, 0, 0, 0, 234, 160, 0, 0, 0, 0, 193, 191, 0, 0, 0, 0, 138, 207, 0, 0, 0, 0, 78, 209, 0, 0, 0, 0, 21, 201, 0, 0, 0, 0, 46, 236, 0, 0, 0, 0, 84, 254, 0, 0, 0, 0, 123, 266, 0, 0, 0, 0, 162, 263)
}
point_count = 23

[node name="Leaf" type="Node2D"]
script = ExtResource("1_kdusa")
speed = 200

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(-71, -3)
scale = Vector2(0.5, 0.5)
curve = SubResource("Curve2D_4yrfy")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(144, 5)
rotation = 2.49052
scale = Vector2(0.2, 0.2)
loop = false

[node name="Sprite2D" type="Sprite2D" parent="Path2D/PathFollow2D"]
scale = Vector2(6, 6)
texture = ExtResource("1_lldyr")

[node name="TimerGrounded" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="TimerDisappear" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="TimerGrounded" to="." method="_on_timer_grounded_timeout"]
[connection signal="timeout" from="TimerDisappear" to="." method="_on_timer_disappear_timeout"]
